--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -195,22 +195,22 @@ ul.dropdown li a:hover{
     margin-top: 80px;
     width: 100%;
     height: 900px;
-    background-image: url(/images/school1.jpg);
+    background-image: url(images/school1.jpg);
     background-size: cover;
     animation: slide 30s infinite;
 }
 @keyframes slide{
     25%{
-        background-image: url(/images/school2.jpg);
+        background-image: url(images/school2.jpg);
     }
     50%{
-        background-image: url(/images/school3.jpg);
+        background-image: url(images/school3.jpg);
     }
     75%{
-        background-image: url(/images/school5.jpg);
+        background-image: url(images/school5.jpg);
     }
     100%{
-        background-image: url(/images/school1.jpg);
+        background-image: url(images/school1.jpg);
     }
 }
 .home h1{
@@ -280,7 +280,7 @@ ul.dropdown li a:hover{
 .pattern{
     display: flex;
     flex-direction: column;
-    background-image: url(/images/pattern.svg);
+    background-image: url(images/pattern.svg);
     background-size: 100%;
     padding: 100px 0px;
 }
@@ -349,8 +349,7 @@ video{
     color: white;
     text-decoration: none;
     width:  600px;
-    background-color: #102649;
-    background-image: url(/images/Inschrijven.jpg);
+    background-image: url(images/Inschrijven.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
     height: 355px;
@@ -365,7 +364,7 @@ video{
     text-decoration: none;
     margin-left: 50px;
     width:  600px;
-    background-image: url(/images//Studierichtingen.jpg);
+    background-image: url(images//Studierichtingen.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 355px;
@@ -374,11 +373,11 @@ video{
 }
 .direction:hover{
     color: white;
-    background-image: url(/images/HStudierichtingen.jpg);
+    background-image: url(images/HStudierichtingen.jpg);
 }
 .register:hover{
     color: white;
-    background-image: url(/images/HInschrijven.jpg);
+    background-image: url(images/HInschrijven.jpg);
 }
 .menu ul li:hover::after{
     width: 100%;
