--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -195,7 +195,7 @@ ul.dropdown li a:hover{
     margin-top: 80px;
     width: 100%;
     height: 900px;
-    background-image: url(images/school1.jpg);
+    background-image: url(/images/school1.jpg);
     background-size: cover;
     animation: slide 30s infinite;
 }
