--- a/BerkayUnutkan/style_berkay3.css
+++ b/BerkayUnutkan/style_berkay3.css
@@ -23,18 +23,20 @@ body{
     width: 100%;
     position: fixed;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    z-index: 10;
 }
 .nav{
-    padding: 20px 0px;
+    padding: 8px 0;
     margin: 0 auto;
     width: 85%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
+    z-index: 10;
 }
 .image{
-    width: 190px;
+    width: 180px;
     display: flex;
     align-items: center;
     flex-direction: row;
